--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -30,11 +30,9 @@
 
 <div style="text-align:center">
 
-    <div class="center indigo lighten-4 white-text" style="margin:50px 0px 100px 0;">
-        <MudText Style="padding:30px 10px" Typo="Typo.h3">
-            ABM Paie - Formations sur MySilae
-        </MudText>
-    </div>
+    <MudImage Src="/images/logos/abm-paie_banner.png" Alt="ABM Paie - Formations sur My Silae" 
+              Style="height:auto;max-width:85%;min-width:450px;
+                     border:solid;border-color:black;border-radius:1rem;border-width:medium;" />
     
     <div class="center" style="margin:30px 0;">
         <MudText Class="indigo-text" Typo="Typo.h5">
