fix: small improvements

--- a/ABM.Paie/Pages/Contact.razor
+++ b/ABM.Paie/Pages/Contact.razor
@@ -21,7 +21,7 @@
             Si je suis indisponible (en formation par exemple), veuillez me laisser vos coordonnées, de préférence par SMS avec :
         </Paragraph>
         <div class="d-flex flex-wrap">
-            <MudDivider Vertical="true" FlexItem="true" Style="margin:0px 20px;" />
+            <MudDivider Vertical="true" FlexItem="true" />
             <Paragraph>
                 le nom de l'entreprise,
                 <br />
