--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -22,9 +22,7 @@
 
 <div class="center">
 
-    <MudImage Src="/images/logos/abm-paie_banner.png" Alt="ABM Paie - Formations sur My Silae" 
-              Style="height:auto;max-width:85%;min-width:450px;
-                     border:solid;border-color:black;border-radius:1rem;border-width:medium;" />
+    <MudImage Src="/images/logos/abm-paie_banner.png" Alt="ABM Paie - Formations sur My Silae" id="banner" />
     
     <h1>Faire découvrir, progresser et se perfectionner</h1>
     
