--- a/ABM.Paie/Components/QuoteCarousel.razor
+++ b/ABM.Paie/Components/QuoteCarousel.razor
@@ -1,13 +1,14 @@
 ﻿@using ABM.Paie.Models
-
-<MudCarousel Class="quote-carousel" AutoCycleTime="TimeSpan.FromSeconds(10)" ShowBullets="false" TData="object">
-    @foreach (var quote in Quotes)
-    {
-        <MudCarouselItem Class="quote-carousel-item" Transition="Transition.Fade">
-            <div><span>@quote.Text</span> <span>@quote.Author</span></div>
-        </MudCarouselItem>
-    }
-</MudCarousel>
+<div>
+    <MudCarousel Class="quote-carousel" AutoCycleTime="TimeSpan.FromSeconds(10)" ShowBullets="false" TData="object">
+        @foreach (var quote in Quotes)
+        {
+            <MudCarouselItem Class="quote-carousel-item" Transition="Transition.Fade">
+                <div><span>@quote.Text</span> <span>@quote.Author</span></div>
+            </MudCarouselItem>
+        }
+    </MudCarousel>
+</div>
 
 @code {
     [Parameter]
