--- a/ABM.Paie/wwwroot/css/app.css
+++ b/ABM.Paie/wwwroot/css/app.css
@@ -137,6 +137,21 @@ code {
 
 /* Layout */
 
+#banner {
+    border:solid;
+    border-color: black;
+    border-radius: 1rem;
+    border-width: medium;
+    height: auto;
+    margin: 3rem 0;
+    max-width: 85%;
+    min-width: 28rem;
+}
+
+div:has(> #header, > #footer) {
+    margin: 1.5rem 0;
+}
+
 #footer {
     & .mud-button {
         color: white;
@@ -179,6 +194,10 @@ code {
 }
 
 /* QuoteCarousel */
+
+div:has(> .quote-carousel) {
+    margin: 6rem 0 3rem 0;
+}
 
 .quote-carousel {
     border: solid;
@@ -263,6 +282,7 @@ h1, h2 {
     color: #0277BD;
     font-family: Impact;
     font-weight: normal;
+    margin: 3rem 0 1rem 0;
 }
 
 h1 {
@@ -271,10 +291,6 @@ h1 {
 
 h2 {
     font-size: 1.5rem;
-}
-
-.hidden {
-    visibility: hidden;
 }
 
 .large {
