fix: logos + banner

--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -30,7 +30,7 @@
 
 <div style="text-align:center">
 
-    <MudImage Src="/images/logos/abm-paie_banner.png" Alt="ABM Paie - Formations sur My Silae" 
+    <MudImage Src="/images/logos/abm-paie_banner_v2.png" Alt="ABM Paie - Formations Paie & DSN" 
               Style="height:auto;max-width:85%;min-width:450px;
                      border:solid;border-color:black;border-radius:1rem;border-width:medium;" />
     
