fix: remove digiforma

--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -20,7 +20,7 @@
     }
     
     var quotes1 = quotes[0..6];
-    var quotes2 = quotes[6..12];
+    // var quotes2 = quotes[6..12];
     var quotes3 = quotes[12..18];
     var quotes4 = quotes[18..24];
     var quotes5 = quotes[24..30];
@@ -92,7 +92,7 @@
         </MudText>
     </div>
 
-    <QuoteCarousel Quotes="quotes2" />
+    @* <QuoteCarousel Quotes="quotes2" />
     
     <div class="center" style="margin:60px 0;">
         <MudText Class="indigo-text" Typo="Typo.h5">
@@ -108,7 +108,7 @@
                 Visualisez votre courbe de progression, vos compétences acquises, vos temps de formation et vos scores de formation, dans un espace personnalisé dédié à votre montée en compétence.
             </MudText>
         </div>
-    </div>
+    </div> *@
     
     <QuoteCarousel Quotes="quotes3" />
 
