feat: actu2504 + links and resources update

--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -81,6 +81,12 @@
                 <b>Référente Handicap</b>
             </MudText>
         </MudButton>
+        <br />
+        <MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="@(UriHelper.Get(Section.Qualiopi))" Style="padding:0px 8px">
+            <MudText>
+                <b>Certification QUALIOPI</b>
+            </MudText>
+        </MudButton>
     </div>
     <div style="padding:20px;width:400px;">
         <MudButton Class="white-text" Variant="Variant.Text" Href="@(UriHelper.Get(Constants.Experience))">
