--- a/ABM.Paie/Pages/Home.razor
+++ b/ABM.Paie/Pages/Home.razor
@@ -85,7 +85,7 @@
         <MudText Typo="Typo.h6">
             <b>Découvrez le catalogue de formation ABM Paie au travers de tous les programmes de formation</b><br />
             <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
-                       Href="https://abmformation.catalogueformpro.com" Target="@Constants.Blank"
+                       Href="@(UriHelper.Get(Constants.Formation))"
                        EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
                 en savoir plus
             </MudButton>
@@ -124,7 +124,7 @@
                 en savoir plus
             </MudButton>
             <br />
-            <MudText Class="indigo-text" Typo="Typo.h5" Style="margin:100px 0 0 0;">
+            <MudText Class="indigo-text" Typo="Typo.h5" Style="margin:80px 0 0 0;">
                 <b>Mes valeurs</b>
             </MudText>
             <div class="d-flex flex-wrap justify-content-between indigo lighten-2" style="margin:30px 0;width:stretch;">
@@ -157,26 +157,48 @@
             <MudText Class="indigo-text" Typo="Typo.h5">
                 <b>Mes actualités</b>
             </MudText>
-            <MudCard Style="width:300px;margin:20px 0;">
-                <MudCardHeader>
-                    <MudText Typo="Typo.h6">
-                        Décembre 2024
-                    </MudText>
-                </MudCardHeader>
-                <MudCardMedia Image="/images/formations/ABMq_Absences.jpg" Height="300" />
-                <MudCardContent>
-                    <MudText Typo="Typo.body1">
-                        La formation<br /><i>Absences en heures mensualisées</i>
-                    </MudText>
-                </MudCardContent>
-                <MudCardActions>
-                    <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                        Href="@(UriHelper.Get(Constants.Actualite))" 
-                        EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
-                        en savoir plus
-                    </MudButton>
-                </MudCardActions>
-            </MudCard>
+            <div class="center" style="flex-wrap:wrap;align-items:start;">
+                <MudCard Style="width:300px;margin:20px 10px;">
+                    <MudCardHeader>
+                        <MudText Typo="Typo.h6">
+                            Avril 2025
+                        </MudText>
+                    </MudCardHeader>
+                    <MudCardMedia Image="/images/actualites/ABMq_Certifications.png" Height="300" />
+                    <MudCardContent>
+                        <MudText Typo="Typo.body1">
+                            Nouvelles certifications
+                        </MudText>
+                    </MudCardContent>
+                    <MudCardActions>
+                        <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
+                                   Href="@(UriHelper.Get(Constants.Actualite)+"#actu2504")"
+                                   EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
+                            en savoir plus
+                        </MudButton>
+                    </MudCardActions>
+                </MudCard>
+                <MudCard Style="width:300px;margin:20px 10px;">
+                    <MudCardHeader>
+                        <MudText Typo="Typo.h6">
+                            Décembre 2024
+                        </MudText>
+                    </MudCardHeader>
+                    <MudCardMedia Image="/images/formations/ABMq_Absences.jpg" Height="300" />
+                    <MudCardContent>
+                        <MudText Typo="Typo.body1">
+                            La formation<br /><i>Absences en heures mensualisées</i>
+                        </MudText>
+                    </MudCardContent>
+                    <MudCardActions>
+                        <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
+                            Href="@(UriHelper.Get(Constants.Actualite)+"#actu2412")" 
+                            EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
+                            en savoir plus
+                        </MudButton>
+                    </MudCardActions>
+                </MudCard>
+            </div>
         </div>
     </div>
     
