--- a/ABM.Paie/Layout/MainLayout.razor
+++ b/ABM.Paie/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
 
 <MudContainer>
 	<div class="center" style="text-align:center;margin-top:20px;">
-		<img src="/images/logos/abm-paie.png" alt="logo ABM Paie" width="100"/>
+		<a href="/"><img src="/images/logos/abm-paie.png" alt="logo ABM Paie" width="100" /></a>
 		<MainHeader />
 	</div>
 
@@ -23,7 +23,7 @@
 		<MainFooter />
 	</MudPaper>
 
-	<MudText Class="indigo-text" Style="text-align:right;margin:0 0 10px 0;">version : 202412.0</MudText>
+	<MudText Class="indigo-text" Style="text-align:right;margin:0 0 10px 0;">version : 202505.0</MudText>
 
 	<MudScrollToTop>
 		<MudFab Class="indigo lighten-2 white-text" StartIcon="@Icons.Material.Filled.ArrowCircleUp" />
