fix: Qualiopi uri + cleanup

--- a/ABM.Paie/Pages/Experience.razor
+++ b/ABM.Paie/Pages/Experience.razor
@@ -285,11 +285,11 @@
                         Je découvre également de nouveaux outils de conception de modules de formation en ligne, 
                         comme Kumullus ou Storyline.
                     </MudText>
-                    <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
+                    @* <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
                                Href="/resources/ABMq_Fiche_Projet_CAFEL.pdf" Target="@Constants.Blank"
                                EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
                         décrouvrir mon projet de formation dont la soutenance aura lieu fin juin 2025
-                    </MudButton>
+                    </MudButton> *@
                 </div>
             </ChildContent>
         </MudExpansionPanel>
