--- a/Common/Components/Carousel.razor.css
+++ b/Common/Components/Carousel.razor.css
@@ -1,23 +1,28 @@
 ﻿.common-carousel {
+    --common-carousel-border-radius: 1rem;
     display: flex;
-    border-radius: 1rem;
+    border-radius: var(--common-carousel-border-radius);
+}
+
+.common-carousel.quote {
+    --common-carousel-color: var(--white);
+    height: 6rem;
     background: var(--gray);
     color: var(--white);
-    height: 6rem;
 }
 
 .common-carousel-button {
-    background-color: transparent;
-    border: none;
-    border-radius: 1rem;
-    fill: var(--gray-light);
+    fill: var(--common-carousel-color);
     & svg {
-        fill: inherit;
         height: 2.5rem;
         width: 2.5rem;
     }
 }
 
-.common-carousel-button:hover {
-    fill: var(--white);
+.common-carousel-button.right {
+    border-radius: 0 var(--common-carousel-border-radius) var(--common-carousel-border-radius) 0;
+}
+
+.common-carousel-button.left {
+    border-radius: var(--common-carousel-border-radius) 0 0 var(--common-carousel-border-radius);
 }
