--- a/Common/wwwroot/css/Common.css
+++ b/Common/wwwroot/css/Common.css
@@ -3,6 +3,11 @@
 /* --- --- --- --- --- */
 
 /* Colors */
+@property --shade {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #0000000d;
+}
 @property --black {
     syntax: "<color>";
     inherits: false;
@@ -52,14 +57,6 @@
     syntax: "<color>";
     inherits: false;
     initial-value: #b0bec5;
-}
-
-/* --- --- --- --- --- */
-/* -- CSS VARIABLES -- */
-/* --- --- --- --- --- */
-
-:root {
-
 }
 
 /* --- --- --- --- --- */
@@ -283,4 +280,38 @@
 @font-face {
     font-family: 'Permanent Marker Regular';
     src: url('../fonts/Permanent_Marker/PermanentMarker-Regular.ttf') format('truetype');
+}
+
+/* --- --- --- --- --- */
+/* -- CUSTOM STYLES -- */
+/* --- --- --- --- --- */
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 0;
+    transition: 220ms all ease-in-out;
+}
+
+button:disabled {
+    cursor: not-allowed;
+    fill: var(--shade) !important;
+}
+
+button:disabled, button:hover {
+    background-color: var(--shade);
+}
+
+svg {
+    fill: inherit;
 }
