--- a/ABM.Paie.Formation/Pages/Home.razor
+++ b/ABM.Paie.Formation/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @using Common.Components
+@using Common.Enumerations
 @using ABM.Paie.Formation.Extensions
 @using ABM.Paie.Formation.Resources
 @using Common.Models
@@ -10,6 +11,24 @@
 
 <PageTitle>ABM Paie</PageTitle>
 
-<Carousel Templates="quotes">
-    <QuoteTemplate Quote="context" />
+<Carousel Templates=quotes>
+    <QuoteTemplate Quote=context />
 </Carousel>
+
+<h1>Partenariats</h1>
+
+<Card>
+    <Illustration>
+        <Image Source="/images/facilaepaie/Logo Facilae_edited.avif" Label="Logo Facilae Paie" />
+    </Illustration>
+    <Description>
+        <Paragraph>
+            Facilite vos migrations et vos paramétrages dans Silae...
+        </Paragraph>
+    </Description>
+    <Action>
+        <Link Url="https://www.facilaepaie.com" IsExternal=true Color=Color.Partner>
+            visiter Facilae Paie
+        </Link>
+    </Action>
+</Card>
