--- a/ABM.Paie.Formation/wwwroot/css/app.css
+++ b/ABM.Paie.Formation/wwwroot/css/app.css
@@ -91,7 +91,7 @@ code {
 /* --- - GENERAL - --- */
 /* --- --- --- --- --- */
 
-body {
+html {
     max-width: 80rem;
     margin: auto;
     padding: 0.5rem;
@@ -101,4 +101,27 @@ h1 {
     color: var(--primary);
     font-family: 'Permanent Marker Regular';
     font-size: 3rem;
+}
+
+div#header {
+    flex-direction: column;
+}
+
+div#header ul {
+    flex-wrap: wrap;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+div#header, div#header ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+img.banner {
+    max-width: 80%;
+    min-width: 28rem;
 }
