--- a/Common/Components/Icon.razor
+++ b/Common/Components/Icon.razor
@@ -1,24 +1,18 @@
 ﻿@using System.ComponentModel
+@using Common.Enumerations
 @using Common.Extensions
 @inherits BaseComponent
 
-<svg class=@_builder xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
-    <path d=@Content.GetDescription() />
-</svg>
+@if (Content is not null)
+{
+    <svg class=@_builder xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960">
+        <path d=@Content.GetDescription() />
+    </svg>
+}
 
 @code {
-    public enum Path
-    {
-        [Description("M640-80 240-480l400-400 71 71-329 329 329 329-71 71Z")]
-        ArrowBack,
-        [Description("m321-80-71-71 329-329-329-329 71-71 400 400L321-80Z")]
-        ArrowForward,
-        [Description("M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z")]
-        OpenInNew,
-    }
-
     [Parameter, EditorRequired]
-    public Path Content { get; set; }
+    public IconPath? Content { get; set; }
 
     protected override void OnInitialized()
     {
