--- a/Common/Components/Image.razor
+++ b/Common/Components/Image.razor
@@ -1,7 +1,7 @@
 ﻿@using Common.Extensions
 @inherits BaseComponent
 
-<img class=@_builder src=@Source aria-label=@Label style="--common-image-border-radius:@BorderRadius.GetDescription();" />
+<img class=@_builder src=@Source aria-label=@Label />
 
 @code {
     [Parameter, EditorRequired]
