--- a/ABM.Paie.Formation/Layout/MainLayout.razor
+++ b/ABM.Paie.Formation/Layout/MainLayout.razor
@@ -1,3 +1,57 @@
-﻿@inherits LayoutComponentBase
+﻿@using Common.Components
+@using Common.Enumerations
+@using Common.Extensions
+@using Common.Models
+@inherits LayoutComponentBase
+
+@{
+    List<(Common.Models.OpData Page, List<Common.Models.OpData>? Links)> menus = [
+        new(new ButtonData(text: "Formations", color: Color.Primary), [
+                new LinkData("#", text: "Catalogue en ligne"),
+                new LinkData("#", text: "Perfectionnement"),
+                new LinkData("#", text: "Organigramme"),
+            ]),
+        new(new LinkData("#", text: "Actualités", color: Color.Primary), null),
+        new(new ButtonData(text: "ABM Paie", color: Color.Primary), [
+                new LinkData("#", text: "Équipe pédagogique"),
+                new LinkData("#", text: "Référente Assistance technique et pédagogique"),
+                new LinkData("#", text: "Référente handicap"),
+                new LinkData("#", text: "Les indicateurs formation"),
+                new LinkData("#", text: "Mes valeurs"),
+            ]),
+        new(new ButtonData(text: "Expérience", color: Color.Primary), [
+                new LinkData("#", text: "Curriculum vitae", isExternal: true),
+                new LinkData("#", text: "Salariée Silae"),
+                new LinkData("#", text: "Formatrice Silae en chiffres"),
+                new LinkData("#", text: "Étudiante CAFEL"),
+            ]),
+        new(new ButtonData(text: "Contact", cssClass: "filled", color: Color.Primary), [
+                new LinkData("#", text: "Prise de rendez-vous", isExternal: true),
+                new LinkData("#", text: "Coordonnées"),
+                new LinkData("#", text: "Mes pages officielles"),
+            ]),
+        new(new ButtonData(text: "Partenariats", color: Color.Primary), [
+                new LinkData("#", text: "Facilae Paie", isExternal: true),
+            ]),
+    ];
+}
+
+<div id="header">
+    <Image Class="banner" Source="/logos/abm-paie/abm-paie_banner_v3.svg" Label="ABM Paie - Formations sur My Silae" />
+
+    <ul>
+        @foreach (var menu in menus)
+        {
+            <li>
+                <DropDown Title=menu.Page Templates=menu.Links>
+                    <ContentTemplate>
+                        <OpTemplate Data=context />
+                    </ContentTemplate>
+                </DropDown>
+            </li>
+        }
+    </ul>
+
+</div>
 
 @Body
