--- a/Common/Components/BaseComponent.razor
+++ b/Common/Components/BaseComponent.razor
@@ -7,11 +7,9 @@
     [Parameter]
     public string? Class { get; set; }
     [Parameter]
-    public Color Color { get; set; } = Color.Primary;
+    public Color Color { get; set; } = default;
     [Parameter]
-    public Size FontSize { get; set; } = Size.NormalSize;
-    [Parameter]
-    public Size BorderRadius { get; set; } = Size.NormalSize;
+    public Size FontSize { get; set; } = default;
 
     protected override void OnInitialized()
     {
