--- a/Common/Components/Card.razor.css
+++ b/Common/Components/Card.razor.css
@@ -1,17 +1,31 @@
 ﻿.common-card {
-    --common-card-border-radius: 1rem;
     display: flex;
     flex-direction: column;
     border: none;
-    border-radius: var(--common-card-border-radius);
+    border-radius: 1rem;
     box-shadow: 0 0.125rem 0.25rem 0.125rem var(--shade-dark);
     color: var(--gray-dark);
-    font-family: 'Encode Sans SemiExpanded Medium';
     text-align: center;
     align-items: center;
     padding: 0 0 0.5rem;
     width: 15rem;
+}
+.common-card {
     & .common-paragraph {
         margin: 0.5rem 0 0.25rem 0;
+    }
+}
+
+.common-card.top {
+    & .common-image {
+        border-start-start-radius: inherit;
+        border-start-end-radius: inherit;
+    }
+}
+
+.common-card.bottom {
+    & .common-image {
+        border-end-start-radius: inherit;
+        border-end-end-radius: inherit;
     }
 }
